Adiciona novas funcionalidades ao projeto

--- a/Publication.html
+++ b/Publication.html
@@ -15,7 +15,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     
-    <title>Artigos</title>
+    <title>Publicações</title>
   </head>
   <body>
    
@@ -198,20 +198,20 @@
  <footer>
   <div class="container">
         <div class="contatos">
-        <h1 class="display-4 text-center pt-1">Contact</h1>
+        <h1 class="display-4 text-center pt-1">Contato</h1>
       </div>
         <div class="container-fluid boder boder-primary mb-5">
           <div class="row">
             <div class="col" id="footer-left"> 
-            <h5 class="mb-4">laboratory:</h5>
+            <h5 class="mb-4">laboratórios:</h5>
             <p><i class="email">testeTeste@gmail.com</i></p>
             <p><i class="email">testeTeste@gmail.com</i></p>
-            <h5 class="mt-4">Coordinators:</h5>
+            <h5 class="mt-4">Coodenadores:</h5>
             <p><i class="email">testeTeste@gmail.com</i></p>
             <p><i class="email">testeTeste@gmail.com</i></p>
             </div>
             <div class="col" id="footer-right">
-            <h5 class="mb-4"> address:</h5>
+            <h5 class="mb-4"> Endereço:</h5>
             <p class="Endereço">Laboratório de Eletromagnetismo Aplicado, Instituto de Tecnologia, Faculdade de Engenharia de Computação, Universidade Federal do Pará (UFPA), R. Augusto Corrêa, Belém, PA, 66075-900.
             </p>
             <p class="Endereço">Escola Politécnica, Universidade de São Paulo, USP ,Engenharia Civil. Av Prof. Almeida Prado, Butantã, São Paulo, SP.</p>
@@ -220,7 +220,7 @@
         </div>
   </footer>
 <div class="container-Direitos">
-<p id="item-end">&copy; 2024. All rights reserved.</p>
+<p id="item-end">&copy; 2024. Todos os direitos reservados.</p>
 </div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
