--- a/Yt.html
+++ b/Yt.html
@@ -199,20 +199,20 @@
      <footer>
       <div class="container">
             <div class="contatos">
-            <h1 class="display-4 text-center pt-1">Contact</h1>
+            <h1 class="display-4 text-center pt-1">Contato</h1>
           </div>
             <div class="container-fluid boder boder-primary mb-5">
               <div class="row">
                 <div class="col" id="footer-left"> 
-                <h5 class="mb-4">laboratory:</h5>
+                <h5 class="mb-4">laboratórios:</h5>
                 <p><i class="email">testeTeste@gmail.com</i></p>
                 <p><i class="email">testeTeste@gmail.com</i></p>
-                <h5 class="mt-4">Coordinators:</h5>
+                <h5 class="mt-4">Coodenadores:</h5>
                 <p><i class="email">testeTeste@gmail.com</i></p>
                 <p><i class="email">testeTeste@gmail.com</i></p>
                 </div>
                 <div class="col" id="footer-right">
-                <h5 class="mb-4"> address:</h5>
+                <h5 class="mb-4"> Endereço:</h5>
                 <p class="Endereço">Laboratório de Eletromagnetismo Aplicado, Instituto de Tecnologia, Faculdade de Engenharia de Computação, Universidade Federal do Pará (UFPA), R. Augusto Corrêa, Belém, PA, 66075-900.
                 </p>
                 <p class="Endereço">Escola Politécnica, Universidade de São Paulo, USP ,Engenharia Civil. Av Prof. Almeida Prado, Butantã, São Paulo, SP.</p>
@@ -221,7 +221,7 @@
             </div>
       </footer>
     <div class="container-Direitos">
-    <p id="item-end">&copy; 2024. All rights reserved.</p>
+    <p id="item-end">&copy; 2024. Todos os direitos reservados.</p>
     </div>
 
     <script src = "/teste.js">
