Adiciona novas funcionalidades ao projeto

--- a/Home.html
+++ b/Home.html
@@ -33,13 +33,13 @@
               <a class="nav-link active" aria-current="page" href="/Home.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/Yt.html">Video</a>
+              <a class="nav-link" href="/Yt.html">Videos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link  " href="/Publication.html">Publication</a>
+              <a class="nav-link" href="/Publication.html">Publicações</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link " href="/Members.html">Members</a>
+              <a class="nav-link" href="/Members.html">Membros</a>
             </li>
             <li class="nav-item">
               <a class="nav-link disabled" aria-disabled="true">Working..</a>
