--- a/Members.html
+++ b/Members.html
@@ -34,7 +34,7 @@
               <a class="nav-link" href="/Yt.html">Videos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link  " href="/Publication.html">Publicações</a>
+              <a class="nav-link" href="/Publication.html">Publicações</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active " href="/Members.html">Membros</a>
@@ -52,7 +52,7 @@
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
         <h1 class="fw-light display-4">integrantes</h1>
-        <p class="lead text-body-secondary ">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
+        <p class="Sobre_seccao ">Nossa equipe é composta por indivíduos apaixonados e dedicados que compartilham um interesse comum em SHM. Juntos, trabalhamos para explorar novas ideias, promover a inovação e alcançar nossos objetivos de maneira colaborativa. Estamos comprometidos em criar um ambiente inclusivo e acolhedor, onde cada membro é valorizado e incentivado a contribuir com suas habilidades e experiências únicas. Conheça nossa equipe abaixo e saiba mais sobre quem somos e o que fazemos</p>
       </div>
     </div>
   </section>
