--- a/Publication.html
+++ b/Publication.html
@@ -31,13 +31,13 @@
               <a class="nav-link" aria-current="page" href="/Home.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/Yt.html">Video</a>
+              <a class="nav-link" href="/Yt.html">Videos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active " href="/Publication.html">Publication</a>
+              <a class="nav-link active" href="/Publication.html">Publicações</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link  " href="/Members.html">Members</a>
+              <a class="nav-link" href="/Members.html">Membros</a>
             </li>
             <li class="nav-item">
               <a class="nav-link disabled" aria-disabled="true">Working..</a>
@@ -51,8 +51,8 @@
   <section class="py-5 text-center container">
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="fw-light display-4">Publication</h1>
-        <p class="lead text-body-secondary ">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
+        <h1 class="fw-light display-4">Publicação</h1>
+        <p class="Sobre_seccao ">Bem-vindo à nossa plataforma de publicação de trabalhos científicos! Aqui, você encontrará uma comunidade dedicada à disseminação de conhecimento por meio de eventos e revistas científicas. Nossa missão é fornecer uma plataforma acessível e eficiente para pesquisadores compartilharem suas descobertas, promovendo a colaboração e o avanço da ciência. Explore nossas diversas oportunidades de publicação e faça parte dessa rede global de acadêmicos comprometidos com o progresso científico.</p>
       </div>
     </div>
   </section>
@@ -66,13 +66,8 @@
             <img src="/img/imag1.jpg">
             <div class="card-body">
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                <a href="#" class="btn btn-sm btn-outline-secondary">View</a>
-                </div>
-                <small class="text-body-secondary"> xx/xx/xx</small>
-              </div>
             </div>
+            <a href = "#"><button type="button" class="btn btn-outline-secondary" id = "Botao">Saiba Mais</button></a>
           </div>
         </div>
         <div class="col">
@@ -80,13 +75,8 @@
             <img src="/img/imag1.jpg">
             <div class="card-body">
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <a href="#" class="btn btn-sm btn-outline-secondary">View</a>
-                </div>
-                <small class="text-body-secondary"> xx/xx/xx</small>
-              </div>
             </div>
+            <a href = "#"><button type="button" class="btn btn-outline-secondary" id = "Botao">Saiba Mais</button></a>
           </div>
         </div>
         <div class="col">
@@ -94,56 +84,8 @@
             <img src="/img/imag1.jpg">
             <div class="card-body">
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <a href="#" class="btn btn-sm btn-outline-secondary">View</a>
-                </div>
-                <small class="text-body-secondary"> xx/xx/xx</small>
-              </div>
             </div>
-          </div>
-        </div>
-
-        <div class="col">
-          <div class="card shadow-sm">
-            <img src="/img/imag1.jpg">
-              <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <a href="#" class="btn btn-sm btn-outline-secondary">View</a>
-                </div>
-                <small class="text-body-secondary"> xx/xx/xx</small>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card shadow-sm">
-            <img src="/img/imag1.jpg">
-            <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <a href="#" class="btn btn-sm btn-outline-secondary">View</a>
-                </div>
-                <small class="text-body-secondary"> xx/xx/xx</small>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card shadow-sm">
-            <img src="/img/imag1.jpg">
-            <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <a href="#" class="btn btn-sm btn-outline-secondary">View</a>
-                </div>
-                <small class="text-body-secondary"> xx/xx/xx</small>
-              </div>
-            </div>
+            <a href = "#"><button type="button" class="btn btn-outline-secondary" id = "Botao">Saiba Mais</button></a>
           </div>
         </div>
 
@@ -152,27 +94,8 @@
             <img src="/img/imag1.jpg">
             <div class="card-body">
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <a href="#" class="btn btn-sm btn-outline-secondary">View</a>
-                </div>
-                <small class="text-body-secondary"> xx/xx/xx</small>
-              </div>
             </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card shadow-sm">
-            <img src="/img/imag1.jpg">
-              <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <a href="#" class="btn btn-sm btn-outline-secondary">View</a>
-                </div>
-                <small class="text-body-secondary"> xx/xx/xx</small>
-              </div>
-            </div>
+            <a href = "#"><button type="button" class="btn btn-outline-secondary" id = "Botao">Saiba Mais</button></a>
           </div>
         </div>
         <div class="col">
@@ -180,13 +103,45 @@
             <img src="/img/imag1.jpg">
             <div class="card-body">
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <a href="#" class="btn btn-sm btn-outline-secondary">View</a>
-                </div>
-                <small class="text-body-secondary"> xx/xx/xx</small>
-              </div>
             </div>
+            <a href = "#"><button type="button" class="btn btn-outline-secondary" id = "Botao">Saiba Mais</button></a>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card shadow-sm">
+            <img src="/img/imag1.jpg">
+            <div class="card-body">
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+            <a href = "#"><button type="button" class="btn btn-outline-secondary" id = "Botao">Saiba Mais</button></a>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card shadow-sm">
+            <img src="/img/imag1.jpg">
+            <div class="card-body">
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+            <a href = "#"><button type="button" class="btn btn-outline-secondary" id = "Botao">Saiba Mais</button></a>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card shadow-sm">
+            <img src="/img/imag1.jpg">
+            <div class="card-body">
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+            <a href = "#"><button type="button" class="btn btn-outline-secondary" id = "Botao">Saiba Mais</button></a>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card shadow-sm">
+            <img src="/img/imag1.jpg">
+            <div class="card-body">
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+            <a href = "#"><button type="button" class="btn btn-outline-secondary" id = "Botao">Saiba Mais</button></a>
           </div>
         </div>
       </div>
